Changed productName != name in package.json gave build error
productName now = name

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "postinstall": "npm run lint:fix"
   },
   "build": {
-    "productName": "Sladdlös",
+    "productName": "sladdlos",
     "appId": "com.yellowfortyfour.sladdlos",
     "directories": {
       "output": "build"
