--- a/package.json
+++ b/package.json
@@ -58,10 +58,13 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-solid-svg-icons": "^5.2.0",
     "@fortawesome/vue-fontawesome": "^0.1.1",
-    "vue": "^2.3.3",
     "axios": "^0.16.1",
+    "install": "^0.12.1",
+    "npm": "^6.4.0",
+    "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
     "vue-router": "^2.5.3",
+    "vue-spinner": "^1.0.3",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
