--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "postinstall": "npm run lint:fix"
   },
   "build": {
-    "productName": "sladdlos",
+    "productName": "Sladdlös",
     "appId": "com.yellowfortyfour.sladdlos",
     "directories": {
       "output": "build"
@@ -45,7 +45,8 @@
       ]
     },
     "mac": {
-      "icon": "build/icons/mac/icon.icns"
+      "icon": "build/icons/mac/icon.icns",
+      "category": "public.app-category.utilities"
     },
     "win": {
       "icon": "build/icons/win/icon.ico"
